[package]
name = "search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
quick-xml = "0.31.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
stop-words = "0.8.0"
futures = "0.3"
actix-files = "0.6.2"
actix-cors = "0.6.4"
